test/modules/diten/returnRecordDiffModule.good
returnRecordDiffModule.chpl:11: In function 'main':
returnRecordDiffModule.chpl:12: error: record 'R' is not visible at this point
